--- a/src/Theme.css
+++ b/src/Theme.css
@@ -22,6 +22,10 @@
   --transition: 0.1s ease-out;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   color: var(--color-black, #000000);
   background-color: var(--color-background, #ffffff);
