--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,6 +1,15 @@
 .form {
   display: flex;
   flex-direction: column;
-  padding: 1rem;
+  padding: 0 0 2rem 0;
   width: 100%;
+  border-bottom: var(--border-width) var(--border-style) var(--color-secondary);
+}
+
+@media (min-width: 580px) {
+  .form {
+    border-bottom: none;
+    border-right: var(--border-width) var(--border-style) var(--color-secondary);
+    padding: 0 2rem 0 0;
+  }
 }
