--- a/src/features/user/components/UserList/UserList.module.css
+++ b/src/features/user/components/UserList/UserList.module.css
@@ -1,10 +1,17 @@
 .list {
   list-style: none;
-  padding: 0;
+  padding: 2rem 0;
   width: 100%;
   max-height: 300px;
   overflow-x: hidden;
   overflow-y: auto;
+  margin: 0;
+}
+
+@media (min-width: 580px) {
+  .list {
+    padding: 0 0 0 2rem;
+  }
 }
 
 .listItem {
