--- a/src/features/user/components/UsersSection/UsersSection.module.css
+++ b/src/features/user/components/UsersSection/UsersSection.module.css
@@ -1,7 +1,7 @@
 .section {
   background-color: var(--color-white);
   display: grid;
-  padding: 1rem 2rem;
+  padding: 2rem;
   margin: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   justify-items: center;
